[package]
name = "turtlesim_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mimic"
path = "src/mimic.rs"

[[bin]]
name = "turtle_teleop_key"
path = "src/teleop_turtle_key.rs"

[[bin]]
name = "draw_square"
path = "src/draw_square.rs"

[dependencies]
anyhow = "1.0.71"
rclrs = "*"
geometry_msgs = "*"
std_srvs = "*"
turtlesim = "*"
crossterm = "0.26.1"
